<resources>
    <string name="app_name">BatikAdminManagerApp</string>
    <string name="todo">imageAdd</string>
    <string name="batik">BATIK</string>
    <string name="login">Login</string>
    <string name="assisten">Assisten</string>
    <string name="signup">Sign up</string>
    <string name="enter_user_name">Enter user name</string>
    <string name="enter_password">Password</string>
    <string name="register">Register</string>
    <string name="conform_password">Conform password</string>
    <string name="p_password">Enter password</string>
    <string name="submit">Submit</string>
    <string name="navigation_drawer_open"> open navigation</string>
    <string name="navigation_drawer_close"> close navigation</string>
    <string name="ok_to_back">baktoMain</string>
    <string name="sails">Sale</string>
    <string name="Purchase">Purchase</string>
    <string name="Storage">Storage</string>
    <string name="CusOrd">Custom Orders</string>
    <string name="add_record">Add Record</string>
    <string name="view_recode">View Recode</string>
    <string name="save_data">Save Data</string>

    signup
</resources>