<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/ic_gor"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/imglogin"
        android:src="@drawable/ic_baseline_login_24"
        android:contentDescription="@string/todo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imgloginTest"
        android:text="@string/login"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="@color/black"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:padding="10dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_account_circle_24"
            android:contentDescription="@string/todo" />

        <EditText
            android:id="@+id/etUserName"
            android:layout_width="259dp"
            android:layout_height="wrap_content"
            android:autofillHints="Enter user name"
            android:ems="10"
            android:hint="@string/enter_user_name"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.2" />


    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_vpn_key_24"
            android:contentDescription="@string/todo" />

        <EditText
            android:id="@+id/etPasswoord"
            android:layout_width="259dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/enter_password"
            />
    </LinearLayout>

    <Button
        android:id="@+id/loginuser"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/round_button"
        android:text="@string/login"
        android:textSize="25sp"
        android:textStyle="bold"
        app:backgroundTint="#E1307DFF" />
    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textSize="20sp"
        android:text="@string/register"
        android:textStyle="bold"/>


</LinearLayout>