<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/ic_res1">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="256dp"
        android:layout_height="195dp"
        android:layout_marginTop="140dp"
        android:contentDescription="@string/todo"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/scr_logo2" />

    <TextView
        android:id="@+id/tital"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginTop="5dp"
        android:fontFamily="cursive"
        android:gravity="center"
        android:text="@string/batik"
        android:textSize="70sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/tital2"
        android:layout_width="419dp"
        android:layout_height="77dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/abeezee"
        android:gravity="center"
        android:text="@string/assisten"
        android:textColor="@color/black"
        android:textSize="50sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tital" />

</androidx.constraintlayout.widget.ConstraintLayout>